[tool.poetry]
name = "cluster-analysis"
version = "0.1.0"
description = "Library for cluster analysis"
authors = ["Grebenyuk Vasilii <vasya.31.46@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
opencv-python = "^4.10.0.84"
matplotlib = "^3.9.0"
scipy = "^1.13.1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
